# xclients

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  opencode.json  pixi.toml  pyproject.toml  ruff.toml  test_server_wilor.py
core/cli/: da3.py
plugins/gui/: viewer.py
plugins/server_camera/: main.py  pyproject.toml
plugins/server_da3/: README.md  da3.py  main.py  pyproject.toml
plugins/server_da3/src/server_da3/: da3.py  main.py
plugins/server_fp/: main.py  pyproject.toml
plugins/server_hamer/: main.py  pyproject.toml
plugins/server_hamer/src/server_hamer/: array_util.py  log.py  server.py  util.py  vitpose_model.py
plugins/server_keyboard/: README.md  keyboard.py  pyproject.toml
plugins/server_roboreg/: client.py  main.py  pyproject.toml  server.py  xarm7_standalone.urdf
plugins/server_roboreg/assets/: xarm_gripper_fixed_open.stl
plugins/server_roboreg/old-cli/: rr_cam_swarm.py  rr_mono_dr.py  rr_render.py  rr_sam2.py  rr_stereo_dr.py
plugins/server_roboreg/src/server_roboreg/: common.py  dr.py  hydra.py  logging_utils.py  render.py  roboreg_api.py  rr_mono_dr.py  rr_render.py  server.py
plugins/server_roboreg/src/server_roboreg/old-cli/: rr_cam_swarm.py  rr_mono_dr.py  rr_sam2.py  rr_stereo_dr.py
plugins/server_sam3/: README.md  main.py  pyproject.toml
plugins/server_sam3db/: pyproject.toml  server.py  test_server.py
plugins/server_sam3db/src/server_sam3db/: patch_import.py  server.py
plugins/server_sam3do/: CLAUDE.md  main.py  pyproject.toml  setup.md
plugins/server_sam3do/src/: server.py
plugins/server_sam3do/src/server_sam3do/: inference.py  server.py
plugins/server_spacemouse/: main.py  policy.py  pyproject.toml
plugins/server_spacemouse/src/server_spacemouse/: viewer.py
plugins/server_tri/: .ruff.toml  icp.py  main.py  pyproject.toml  rerun_urdf.py
plugins/server_tri/assets/: base_link.stl  link2.stl  link3.stl  link4.stl  link5.stl
plugins/server_tri/src/server_tri/: camera_parameters.py  open3d_viewer.py  read.py  rerun_urdf.py
plugins/server_tri/src/server_tri/rerun_util/: blueprint.py  log.py
plugins/server_wilor/: .ruff.toml  main.py  pyproject.toml  pytest.ini  server.py
plugins/server_wilor/src/server_wilor/: demo.py  dummy.py  server.py  test_render_wilor.py  test_server_model.py
plugins/server_wilor/tests/: test_demo.py  utils.py
plugins/server_yolo8pose/: pyproject.toml
plugins/server_yolo8pose/src/sever_yolo8pose/: main.py
plugins/synth/: TYRO.md  local_libs  main.py  pyproject.toml  render_cube.py  run_render_cube.sh  smoke_test_keypoints.py
plugins/synth/.local_libs/: libGLU.so.1
plugins/synth/assets/: end_tool.stl  left_inner_knuckle.stl  link1.stl  link6.stl  right_inner_knuckle.stl
plugins/synth/xarm7_standalone_usd/: UF_ROBOT.usda
plugins/synth/xarm7_standalone_usd/Payload/: Contents.usda  Geometry.usda  GeometryLibrary.usdc  Materials.usda  MaterialsLibrary.usdc  Physics.usda
scripts/: camera.py  camera4human.py  da3.py  dream.py  dream_dr.py  foundation_pose.py  gradio_debugger.py  hydra.py  init.sh  main.py  roboreg.py  sam3.py  sam3do.py  sam3do.py.bck  test_transforms.py  triangulate.py  wilor.py  write_arrayrecord_extrinsics.py  zarr_to_foxglove_mcap.py
scripts/sam3do_results/result_20260217_002321_0/: output.json
scripts/sam_utils/: image_utils.py  save_results.py
scripts/view/: dream.py  from_client.py  memmap.py  wilor.py
src/server_hydra/: render.py
src/xclients/: __init__.py  triangulate.py
src/xclients/cli/: da3.py  preprocess.py
src/xclients/client/: camera.py
src/xclients/core/: cfg.py  colormap.py  latest_worker.py  tf.py
src/xclients/core/run/: blueprint.py  fustrum.py  rerun_urdf.py  scene.py
src/xclients/dream_dr/: __init__.py  arrayrecord_extrinsics.py  config.py  dream_arrayrecord.py  outputs.py  pipeline.py  pose.py  records.py  roboreg.py  sam.py
src/xclients/gui/: viewer.py
src/xclients/messages/: __init__.py  gripper.py
src/xclients/server/: camera.py  da3.py  sam3_server.py
src/xclients/server/hamer/: server.py  util.py  vitpose_model.py
src/xclients/tri/: camera_parameters.py  open3d_viewer.py  rerun_urdf.py
src/xclients/tri/rerun_util/: blueprint.py  log.py
