[build-system]
requires = ["hatchling>=1.26", 'torch']
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["src/xclients"]

[tool.uv.extra-build-dependencies]
xformers = ["torch"]
gsplat = ["torch"]
xtcocotools = ["numpy"]
detectron = ["torch"]

[tool.uv]
# da3
override-dependencies = [
"numpy>=2",
]
no-build-isolation-package = ["xtcocotools", "detectron2"]

[project]
name = "xclients"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "opencv-python>=4.11.0.86",
    "pydantic>=2.11.10",
    "rich>=14.2.0",
    "tyro>=0.9.35",
    "webpolicy",
]

[project.optional-dependencies]
hamer = [
    # TODO replace mmpose with original as separate
    # mmpose@git+https://github.com/ViTAE-Transformer/ViTPose@d5216452796c90c6bc29f5c5ec0bdba94366768a
    "flax>=0.12.1",
    "torch>=2.9.0",
    "detectron2",
    "hamer[server]",
]
da3 = [
    "open3d[gui]",
    "depth-anything-3[all]",
    "xformers>=0.0.33.post1",
]
all = [
    "open3d[gui]",
    "depth-anything-3[all]",
    "xformers>=0.0.33.post1",
    "hamer[server]",
]
cv = [
    "opencv-python>=4.11.0.86",
    "opencv-python-headless>=4.11.0.86",
]



[tool.uv.sources]
xclients = { workspace = true }
webpolicy = { git = "https://github.com/mhyatt000/webpolicy" }
hamer = { git = "https://github.com/mhyatt000/hamer" }
depth-anything-3 = { git = "https://github.com/ByteDance-Seed/Depth-Anything-3" }
detectron2 = { git = "https://github.com/facebookresearch/detectron2" }


[project.scripts]
yourpkg = "yourpkg.cli:main"   # if you expose a CLI
da3 = "depth_anything_3.cli:app"



[tool.pytest.ini_options]
addopts = "-q"

[tool.ruff]
target-version = "py310"
line-length = 100
lint.extend-select = ["I", "UP", "B", "C4", "SIM", "PERF"]
fix = true
src = ["src", "tests"]

[tool.pyright]
include = ["src", "tests"]
reportMissingTypeStubs = false
pythonVersion = "3.10"

[tool.coverage.run]
source = ["yourpkg"]
branch = true

[dependency-groups]
dev = [
    "xclients",
]

