[build-system]
requires = ["hatchling>=1.26", 'torch']
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["src/xclients"]

[tool.uv.extra-build-dependencies]
# da3
# xformers = ["torch"]
# gsplat = ["torch"]
nvidia-pyindex = ["pip"]

[tool.uv]
# da3
override-dependencies = [
"numpy>=2",
"torchaudio", # sam
]

[project]
name = "xclients"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pydantic>=2.11.10",
    "rich>=14.2.0",
    "tyro>=0.9.35",
    "webpolicy",
]

[project.optional-dependencies]
cv = [
    "opencv-python>=4.9.0.80",
    "opencv-python-headless",
]
sam3d = [
    "sam3d-objects",
]



[tool.uv.sources]
xclients = { workspace = true }
webpolicy = { git = "https://github.com/mhyatt000/webpolicy" }
hamer = { git = "https://github.com/mhyatt000/hamer" }
depth-anything-3 = { git = "https://github.com/ByteDance-Seed/Depth-Anything-3" }
sam3d-objects = { git = "https://github.com/facebookresearch/sam-3d-objects" }

[project.scripts]
yourpkg = "yourpkg.cli:main"   # if you expose a CLI
da3 = "depth_anything_3.cli:app"



[tool.pytest.ini_options]
addopts = "-q"

[tool.ruff]
target-version = "py310"
line-length = 100
lint.extend-select = ["I", "UP", "B", "C4", "SIM", "PERF"]
fix = true
src = ["src", "tests"]

[tool.pyright]
include = ["src", "tests"]
reportMissingTypeStubs = false
pythonVersion = "3.10"

[tool.coverage.run]
source = ["yourpkg"]
branch = true

[dependency-groups]
dev = [
    "xclients",
]

