[project]
name = "server_fp"
version = "0.1.0"
description = "FoundationPose Server Plugin"
requires-python = ">=3.11"
dependencies = [
    "torch",
    "numpy",
    "opencv-python",
    "pydantic",
    "msgpack",
    "msgpack-numpy",
    "fastapi",
    "uvicorn",
    "typer",
    "webpolicy",
    "ruamel.yaml",
    "hydra-core",
    "omegaconf",
    "h5py",
    "trimesh",
    "scipy",
    "pyrender",
    "matplotlib",
    "scikit-image",
    "tqdm",
    "transforms3d",
    "open3d",
    "imageio",
    "pyglet<2",
    "psutil",
    "torchvision",
    "transformations",
    "kornia",
    "ninja",
    "xclients",
    "tyro>=1.0.5",
    "pytorch3d",
    "nvdiffrast",
]

[project.optional-dependencies]
core = [
    "numpy>=2.4.1",
    "nvdiffrast>=0.4.0",
    "pydantic>=2.12.5",
    "torch>=2.10.0",
    "trimesh>=4.11.1",
    "tyro>=1.0.5",
    "webpolicy>=0.1.0",
    "xclients>=0.1.0",
]



[tool.uv]
package = false

[tool.uv.sources]
webpolicy = { git = "https://github.com/mhyatt000/webpolicy" }
xclients = { path = "../../", editable = true }
pytorch3d = { git = "https://github.com/facebookresearch/pytorch3d" }
nvdiffrast = { git = "https://github.com/NVlabs/nvdiffrast.git" }

[tool.uv.extra-build-dependencies]
pytorch3d = ["torch"]
nvdiffrast = ["torch"]
