[build-system]
requires = ["uv_build>=0.9.15"]
build-backend = "uv_build"

# nvdiffrast requires torch to build
[tool.uv.extra-build-dependencies]
nvdiffrast = ["torch"]

[tool.uv]
exclude-dependencies = [
    "sam2", # roboreg depends on sam2 but not us
    # "diffrp-nvdiffrast>=0.3.3.1", # build yourself
]
no-build-isolation-package = ["nvdiffrast"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true



[project]
name = "server-roboreg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "setuptools",
    "wheel",
    "ninja",
    "jax>=0.8.1",
    "rich>=14.2.0",
    "tyro>=0.9.35",
    "webpolicy",
    "roboreg",
    "torch==2.9.0+cu128",
    "nvdiffrast",
]

[tool.uv.sources]
webpolicy = { git = "https://github.com/mhyatt000/webpolicy" }
roboreg = { git = "https://github.com/lbr-stack/roboreg", rev = "main" }
torch = { index = "pytorch-cu128" }
nvdiffrast = { git = "https://github.com/NVlabs/nvdiffrast.git" }
