[project]
name = "server-sam3do"
version = "0.1.0"
description = "SAM3 webpolicy server for image and streaming video prompts"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26.0",
    "pillow>=11.1.0",
    "pydantic>=2.11.10",
    "sam3[dev,notebooks,train]",
    "torch==2.7.0",
    "torchaudio>=2.7.0",
    "torchvision>=0.22.0",
    "tyro>=0.9.35",
    "webpolicy",
]


[tool.uv.sources]
webpolicy = { git = "https://github.com/mhyatt000/webpolicy" }
sam3 = { path = "../../external/sam3", editable = true }

[tool.uv]
override-dependencies = [
    "torchaudio",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.workspace]
members = [
    "sam3",
]
