[build-system]
requires = ["uv_build>=0.9.15"]
build-backend = "uv_build"

[project]
name = "server-sam3db"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "appdirs>=1.4.4",
    "appnope>=0.1.4",
    "black>=26.1.0",
    "chump>=1.6.0",
    "cython>=3.2.4",
    "decord>=0.6.0",
    "detectron2",
    "dill>=0.4.1",
    "einops>=0.8.2",
    "ffmpeg>=1.4",
    "fvcore>=0.1.5.post20221221",
    "huggingface-hub>=1.3.4",
    "hydra-colorlog>=1.2.0",
    "hydra-core>=1.3.2",
    "hydra-submitit-launcher>=1.2.0",
    "joblib>=1.5.3",
    "jsonlines>=4.0.0",
    "loguru>=0.7.3",
    "moge",
    "networkx==3.2.1",
    "ninja>=1.13.0",
    "opencv-python>=4.13.0.90",
    "optree>=0.18.0",
    "pandas>=3.0.0",
    "psutil>=7.2.1",
    "pycocotools>=2.0.11",
    "pyrender>=0.1.45",
    "pyrootutils>=1.0.4",
    "pytest>=9.0.2",
    "pytorch-lightning>=2.6.0",
    "rich>=14.3.1",
    "roma>=1.5.4",
    "sam3",
    "scikit-image>=0.26.0",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "timm>=1.0.24",
    "torch>=2.10.0",
    "wandb>=0.24.0",
    "webdataset>=1.0.2",
    "xclients",
    "xtcocotools",
    "yacs>=0.1.8",
]

[tool.uv]
# Force the use of 'specific-package' version 2.0.0, ignoring other constraints
override-dependencies = [
    "iopath>=0.1.10", # sam3 vs detectron
    # using numpy 1.26 gives torch compile error?
    "numpy>=2.3.5" , # sam3 vs xclients
]

[tool.uv.extra-build-dependencies]
detectron2 = ["torch"]
xtcocotools = ["numpy"]

[tool.uv.sources]
xclients = { path = "../../", editable = true }
detectron2 = { git = "https://github.com/facebookresearch/detectron2.git", rev = "a1ce2f9" }
moge = { git = "https://github.com/microsoft/MoGe.git" }
sam3 = { path = "../../external/sam3" }
xtcocotools = { git = "https://github.com/mhyatt000/xtcocoapi" }
