[build-system]
requires = ["uv_build>=0.9.15"]
build-backend = "uv_build"

[project]
name = "server-sam3do"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "astor==0.8.1",
    "async-timeout==4.0.3",
    "auto-gptq==0.7.1",
    "autoflake==2.3.1",
    "av==12.0.0",
    "bitsandbytes==0.43.0",
    "black==24.3.0",
    "bpy==4.3.0",
    "colorama==0.4.6",
    "conda-pack==0.7.1",
    "crcmod==1.7",
    "cuda-python==12.1.0",
    "dataclasses==0.6",
    "decord==0.6.0",
    "deprecation==2.1.0",
    "easydict==1.13",
    "einops-exts==0.0.4",
    "exceptiongroup==1.2.0",
    "fastavro==1.9.4",
    "fasteners==0.19",
    "flake8==7.0.0",
    "flask==3.0.3",
    "fqdn==1.5.1",
    "ftfy==6.2.0",
    "fvcore==0.1.5.post20221221",
    "gdown==5.2.0",
    "h5py==3.12.1",
    "hdfs==2.7.3",
    "httplib2==0.22.0",
    "hydra-core==1.3.2",
    "hydra-submitit-launcher==1.2.0",
    "igraph==0.11.8",
    "imath==0.0.2",
    "isoduration==20.11.0",
    "jsonlines==4.0.0",
    "jsonpickle==3.0.4",
    "jsonpointer==2.4",
    "jupyter==1.1.1",
    "librosa==0.10.1",
    "lightning==2.3.3",
    "loguru==0.7.2",
    "moge",
    "mosaicml-streaming==0.7.5",
    "ninja>=1.13.0",
    "nvidia-cuda-nvcc-cu12==12.1.105",
    "nvidia-pyindex==1.0.9",
    "objsize==0.7.0",
    "open3d==0.18.0",
    "opencv-python==4.9.0.80",
    "openexr==3.3.3",
    "optimum==1.18.1",
    "optree==0.14.1",
    "orjson==3.10.0",
    "panda3d-gltf==1.2.1",
    "pdoc3==0.10.0",
    "peft==0.10.0",
    "pip-system-certs==4.0",
    "point-cloud-utils==0.29.5",
    "polyscope==2.3.0",
    "pycocotools==2.0.7",
    "pydot==1.4.2",
    "pymeshfix==0.17.0",
    "pymongo==4.6.3",
    "pyrender==0.1.45",
    "pytorch3d",
    "pyrootutils>=1.0.4",
    "pysocks==1.7.1",
    "pytest==8.1.1",
    "python-pycg==0.9.2",
    "randomname==0.2.1",
    "roma==1.5.1",
    "rootutils==1.0.7",
    "rtree==1.3.0",
    "sagemaker==2.242.0",
    "sam3d-objects",
    "scikit-image==0.23.1",
    "sentence-transformers==2.6.1",
    "simplejson==3.19.2",
    "smplx==0.1.28",
    "spconv-cu121==2.3.8",
    "tensorboard==2.16.2",
    "timm==0.9.16",
    "tomli==2.0.1",
    "torch==2.5.1+cu121",
    "torchaudio==2.5.1+cu121",
    "tyro>=1.0.6",
    "uri-template==1.3.0",
    "usort==1.0.8.post1",
    "wandb==0.20.0",
    "webcolors==1.13",
    "webdataset==0.2.86",
    "webpolicy",
    "werkzeug==3.0.6",
    "xatlas==0.0.9",
    "xformers==0.0.28.post3",
]

[tool.uv]
environments = ["sys_platform == 'linux' and platform_machine == 'x86_64'"]
index-strategy = "unsafe-best-match"

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"

[tool.uv.extra-build-dependencies]
pytorch3d = ["torch", "ninja"]
nvidia-pyindex = ["pip"]

[tool.uv.sources]
moge = { git = "https://github.com/microsoft/MoGe.git", rev = "a8c37341bc0325ca99b9d57981cc3bb2bd3e255b" }
server-sam3do = { workspace = true, editable = true }
webpolicy = { git = "https://github.com/mhyatt000/webpolicy" }
sam3d-objects = { path = "../../external/sam3d_objects", editable = true }
pytorch3d = { git = "https://github.com/facebookresearch/pytorch3d" }
