[build-system]
requires = ["uv_build>=0.9.15"]
build-backend = "uv_build"


[project]
name = "server-spacemouse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyspacemouse>=2.0.0",
    "webpolicy",
]

[tool.uv.sources]
webpolicy = { git = "https://github.com/mhyatt000/webpolicy" }
