[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/server_tri"]

[project]
name = "server-tri"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "av>=16.0.1",
    "einops>=0.8.1",
    "jaxtyping>=0.3.3",
    "lxml>=6.0.2",
    "matplotlib>=3.10.7",
    "numpy>=2.2.6",
    "opencv-python>=4.12.0.88",
    "pycolmap>=3.13.0",
    "rerun-sdk>=0.27.2",
    "rich>=14.2.0",
    "tqdm>=4.67.1",
    "trimesh>=4.10.0",
    "tyro>=0.9.35",
    "urchin>=0.0.30",
    "webpolicy",
    "yourdfpy>=0.0.58",
]

[tool.uv.sources]
webpolicy = { git = "https://github.com/mhyatt000/webpolicy" }
server-tri = { workspace = true, editable = true }

[tool.uv.workspace]
members = [
    ".",
]

